# a_maze_ing

./: .gitignore  Makefile  READ.md  README.md  a_maze_ing.py  default_config.txt  maze.txt  pyproject.toml  requirements.txt  test.txt
src/configuration/: check_config_error.py
src/maze/: Maze.py  Maze_Generator.py  README_EN.md  README_FR.md  generation.py  maze.py  resolution.py
src/menu/: menu.py
src/output/: output.py
src/utils/: color.py  effect.py  error.py  interrupt.txt  theme.py
