[project]
name = "a-maze-ing"
version = "0.1.0"
description = ""
authors = [
    {name = "alebaron",email = "alebaron@student.42lehavre.fr"},
    {name = "tcolson",email = "tcolson@student.42lehavre.fr"}
]
license = {text = "CC0-1.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "rich (>=14.3.2,<15.0.0)",
    "termcolor (>=3.3.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
